<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">树洞</string>
    <string name="prompt_email">邮箱</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录或注册</string>
    <string name="action_sign_in_short">登录</string>
    <string name="welcome">欢迎！</string>
    <string name="invalid_username">用户名无效</string>
    <string name="invalid_password">密码至少需要>5个字符</string>
    <string name="login_failed">登录失败</string>
    <string name="thu_hollow">T大树洞</string>
    <string name="pku_hollow">未名树洞</string>
    <string name="other_hollow">其他</string>
    <string name="login_need_school_email">登录树洞需要验证学校邮箱</string>
    <string name="choose_school_hollow">请选择所在学校树洞</string>
    <string name="select_hollow_of_school">Select Hollow Of School</string>
    <string name="email_hint">输入邮箱</string>
    <string name="next">继续</string>
    <string name="agree">同意条款</string>
    <string name="read_usercode"><u>查看【树洞规范】</u></string>
    <string name="input_email">电子邮件地址</string>
    <string name="email_suffix_string">邮件后缀</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="password_info">用户的个人信息会通过设定的密码加密，如果忘记密码会很难找回账户。对于相同的注册邮箱，每180天最多找回密码1次。</string>
    <string name="password">密码</string>
    <string name="valid_code">验证码</string>
    <string name="confirm_password">确认密码</string>
    <string name="wander">随机漫步</string>
    <string name="timeline">时间轴</string>
    <string name="search_hint">关键词或#树洞号</string>
    <string name="empty" />
    <string name="slash">/</string>
    <string name="hotlist">热榜</string>
    <string name="no_more">没有更多了</string>
    <string name="image">图片</string>
    <string name="vote">投票</string>
    <string name="network_error_please_retry">网络不太好，点击重试</string>
    <string name="press_more">上滑或点击加载更多</string>
    <string name="successful_setting">设置成功</string>
    <string name="restart_message">该设置项在重启客户端后生效</string>
    <string name="ok">好的</string>
    <string name="tag_">Tag:</string>
    <string name="redirect_to">跳转到➜</string>
    <string name="deleted">已删除</string>
    <string name="cancel">取消</string>
    <string name="announcement">公告栏</string>
    <string name="redisplay_announcement">重新显示公告</string>
    <string name="redisplay_announcement_detail">重新在首页显示已读过的公告栏</string>
    <string name="search">搜索</string>
    <string name="hide">隐藏</string>
    <string name="origin_pw">原密码</string>
    <string name="new_pw">新密码</string>
    <string name="change_password">更改密码</string>
    <string name="input_config_url">请输入树洞的配置URL</string>
    <string name="clear_cache">清除本地树洞缓存</string>
    <string name="detail_clear_cache">树洞显示出现滞后或错误可以试试</string>
</resources>