<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.mainscreen.MainScreenActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?color_all_background"
            tools:context=".ui.mainscreen.MainScreenActivity">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/wanderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="0dp"
                android:text="@string/wander"
                android:textColor="?color_all_font"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/slashText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.7"
                android:paddingHorizontal="0dp"
                android:paddingVertical="18dp"
                android:text="@string/slash"
                android:textColor="?color_all_font"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/wanderText"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/timelineText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="16dp"
                android:paddingStart="0dp"
                android:paddingEnd="16dp"
                android:text="@string/timeline"
                android:textColor="?color_all_font"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/slashText"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/account_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="6dp"
                android:paddingVertical="12dp"
                android:src="@drawable/ic_account"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/notifications_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="6dp"
                android:paddingVertical="12dp"
                android:src="@drawable/ic_notification_25"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/account_icon"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/favorites_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="6dp"
                android:paddingVertical="12dp"
                android:src="@drawable/ic_star"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/notifications_icon"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/trending_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/empty"
                android:paddingHorizontal="6dp"
                android:paddingVertical="16dp"
                android:src="@drawable/ic_hotlist"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/favorites_icon"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/hotlist"
                android:textColor="?color_all_font_button"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/favorites_icon"
                app:layout_constraintHorizontal_bias="0.62"
                app:layout_constraintStart_toStartOf="@+id/trending_icon"
                app:layout_constraintTop_toTopOf="@+id/trending_icon"
                app:layout_constraintVertical_bias="0.050000012" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?color_all_background" />
    </LinearLayout>
</layout>